<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:contentDescription="@string/match_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:contentDescription="@string/league_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:contentDescription="@string/league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/League"
            android:id="@+id/league_textview"/>
        <TextView
            android:contentDescription="@string/league_match_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/test_text"
            android:textSize="@dimen/League"
            android:textColor="@android:color/black"
            android:id="@+id/matchday_textview"/>
    </LinearLayout>
    <FrameLayout
        android:contentDescription="@string/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <Button
        android:contentDescription="@string/share_with_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/share_text"
        android:id="@+id/share_button"
        android:drawableStart="@android:drawable/ic_menu_share"
        android:paddingStart="120dp"
        android:paddingEnd="120dp"/>
    </FrameLayout>

</LinearLayout>